--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <video id="videoInput"></video> <canvas id="canvasOutput"></canvas>
     </div>
 
-    <script type="module" src="src/index.js"></script>
+    <!--><script type="text/javascript" src="src/index.js"></script><-->
+    <script async="" type="text/javascript" src="opencv.js"></script>
+    <script src="https://webrtc.github.io/adapter/adapter-5.0.4.js" type="text/javascript"></script>
+    <script src="utils.js" type="text/javascript"></script>
   </body>
 </html>
